# RingBuffer

./: CMakeLists.txt  main  receiver  ringbuffer.h  sender  testfile
include/: ringbuffer.h  sender.h
src/: main.c  receiver.c  ringbuffer.c  sender.c
